sonar and java 20 cleanup: Replace 'Stream.collect(Collectors.toList())'